# yabause

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  cmake.yml
.github/workflows/: cmake.linux.ubuntu.libretro.yml  cmake.linux.ubuntu.qt.yml  cmake.linux.ubuntu.yml  cmake.windows.yml  codeql-analysis.yml  release_on_tag.yml
Retropie/installscript/lr-kronos/: lr-kronos-rob-ack.sh
win_template/trans/: kronos_it.yts  kronos_pt_BR.yts  kronos_ru.yts
yabause/: CMakeLists.txt  CMakeSettings.json  ChangeLog  README.QT  README.WIN  configre.git.dependency.linux.sh.in
yabause/CMake/Options/: CMakeLists.txt
yabause/CMakeTests/: FindSDL2.cmake
yabause/l10n/: CMakeLists.txt  kronos_ar.yts  kronos_de.yts  kronos_es.yts  kronos_fr.yts  kronos_ja.yts  kronos_lt.yts  kronos_nl.yts  kronos_pt.yts  kronos_pt_BR.yts  kronos_ru.yts  kronos_sv.yts  kronos_zh_CN.yts  kronos_zh_TW.yts  yabause_fr.yts  yabause_ja.yts
yabause/src/: BackupManager.h  CMakeLists.txt  Counter.cpp  PlayRecorder.cpp  PlayRecorder.h  about.c  bios.c  cd-dummy.c  cd-libretro.c  cdbase.c  cdbase.h  cheat.c  coffelf.c  core.h  cs0.h  cs2.c  debug.c  m68kcore.c  m68kcore.h  m68kmusashi.h  memory.c  memory.h  perdx.c  peripheral.c  peripheral.h  persdljoy.c  scsp.c  scsp.c.orig  scsp.cpp  scsp.h  scu.c  sh2core.c  sh2core.h  sh2int.c  sh2int.h  smpc.c  snddx.c  thr-linux.cpp  thr-windows.c  threads.h  (+15 more)
yabause/src/android/: build.gradle
yabause/src/android/app/: build.gradle  proguard-rules.pro
yabause/src/android/jni/: yui.cpp
yabause/src/aosdk/: eng_ssf.c
yabause/src/core/cd/libretro/: cd-libretro.c
yabause/src/core/m68k/: m68kcore.c  m68kcore.h  m68kmusashi.c  mk68Counter.c  mk68Counter.cpp  mk68Counter.h  mk68Counter.hpp
yabause/src/core/m68k/musashi/: m68k.h  m68k_in.c  m68kcpu.c
yabause/src/core/net/windows/: sock-windows.c
yabause/src/core/osd/include/: osdcore.h
yabause/src/core/osd/src/: osdcore.c
yabause/src/core/peripheral/common/: peripheral.c  peripheral.h
yabause/src/core/peripheral/dx/: perdx.c  perdx.h
yabause/src/core/peripheral/linux/: perlinuxjoy.c
yabause/src/core/peripheral/sdl/: persdljoy.c
yabause/src/core/sound/al/: sndal.c
yabause/src/core/sound/dx/: snddx.c  snddx.h
yabause/src/core/video/: videoInterface.c  videoInterface.h
yabause/src/core/video/opengl/shader_gen/: CMakeLists.txt  main.cpp
yabause/src/ctrl/include/: core.h  movie.h  perfetto_trace.h  stv.h  yabause.h  yui.h
yabause/src/ctrl/src/: movie.c  stv.c  yabause.c
yabause/src/ctrl/threads/: thr-dummy.c  thr-linux.c  thr-macosx.c  thr-rthreads.c  thr-windows.c  thr-windows.cpp  threads.h
yabause/src/gllibs/glew/: glew.c
yabause/src/ios/: CMakeLists.txt  README.md  yui.cpp
yabause/src/ios/uoyabause/: Podfile  PrivacyInfo.xcprivacy  YabaSnashiro copy-Info.plist
yabause/src/libretro/: CMakeLists.txt  Makefile  Makefile.common  README.md  glsym_private.h  libretro.c  libretro.cpp  lr-yabasanshiro-cmake.sh  lr-yabasanshiro-make.sh  lr-yabasanshiro.sh
yabause/src/libretro/jni/: Android.mk
yabause/src/libretro/libretro-common/cdrom/: cdrom.c
yabause/src/libretro/libretro-common/include/glsym/: glsym.h
yabause/src/libretro/libretro-common/vfs/: vfs_implementation_cdrom.c
yabause/src/nanovg/: nanovg_osdcore.c  nanovg_vk.h  nanovg_vulkan_osdcore.cpp
yabause/src/port/libretro/: CMakeLists.txt  Makefile  README.md  libretro.c  libretro_core_options.h
yabause/src/port/linux/: CMakeLists.txt  main.c  main_gl_test.c
yabause/src/port/qt/: Arguments.cpp  CMakeLists.txt  CommonDialogs.cpp  CommonDialogs.h  QtYabause.cpp  QtYabause.h  Settings.h  YabauseGL.cpp  YabauseGL.h  YabauseThread.cpp  YabauseThread.h  main.cpp
yabause/src/port/qt/ui/: UICheatSearch.cpp  UIDebugCPU.cpp  UIDebugCPU.h  UIDebugCPU.ui  UIDebugM68K.cpp  UIDebugM68K.h  UIDebugSCSP.cpp  UIDebugSCSP.h  UIDebugSCSPChan.cpp  UIDebugSCSPChan.h  UIDebugSCSPDSP.cpp  UIDebugSCSPDSP.h  UIDebugSCUDSP.cpp  UIDebugSCUDSP.h  UIDebugSH2.cpp  UIDebugSH2.h  UIDebugVDP1.cpp  UIDebugVDP1.h  UIDebugVDP1.ui  UIDebugVDP2.cpp  UIDebugVDP2.h  UIDebugVDP2.ui  UIDebugVDP2Viewer.cpp  UIDebugVDP2Viewer.h  UIDebugVDP2Viewer.ui  UIDisasm.cpp  UIDisasm.h  UIHexEditor.cpp  UIHexEditor.h  UIHexInput.cpp  UILogs.cpp  UILogs.h  UILogs.ui  UIMemoryEditor.cpp  UIMouseSetting.ui  UISettings.cpp  UISettings.h  UISettings.ui  UIYabause.cpp  UIYabause.h  (+1 more)
yabause/src/qt/: CMakeLists.txt  QYabVulkanWidget.cpp  QYabVulkanWidget.h  QtYabause.cpp  QtYabause.h  YabauseGL.cpp  YabauseThread.cpp  main.cpp
yabause/src/qt/firebase_cpp_sdk/: CMakeLists.txt
yabause/src/qt/resources/: resources.qrc
yabause/src/qt/ui/: UIBackupRam.cpp  UIDebugM68K.cpp  UIDebugSCSP.cpp  UIDebugSCSPChan.cpp  UIDebugSCSPDSP.cpp  UIYabause.cpp  UIYabause.h  UIYabause.ui
yabause/src/retro_arena/: CMakeLists.txt  EventManager.h  InputConfig.cpp  InputManager.cpp  InputManager.h  MenuScreen.cpp  MenuScreen.h  Preference.cpp  README.md  howtouse.md  main.cpp  yabasanshiro.sh
yabause/src/retro_arena/nanogui-sdl/: CMakeLists.txt
yabause/src/sh2_dynarec_devmiyax/: DynarecSh2.cpp  DynarecSh2.h  DynarecSh2CInterface.cpp  dynalib_arm64.s  dynalib_x86_64.asm
yabause/src/sh2_kronos/include/: memory_sh2.h  sh2int_kronos.h
yabause/src/sh2_kronos/src/: memory_sh2.cpp  sh2_opcodes_kronos.c  sh2int_kronos.c
yabause/src/sys/core/: core.mem.c
yabause/src/titan/: titan.c
yabause/src/tools/nanovg/: nanovg_osdcore.c  nanovg_osdcore.h
yabause/src/utils/include/: cdbase.h  cheat.h  db.h  debug.h  error.h  gameinfo.h  japmodem.h  netlink.h
yabause/src/utils/src/: cdbase.c  cheat.c  db.c  debug.c  error.c  gameinfo.c  japmodem.c  netlink.c
yabause/src/utils/windows/: semaphore.cpp  semaphore.h
yabause/src/vulkan/: FramebufferRenderer.cpp  FramebufferRenderer.h  Platform.cpp  Platform.h  Renderer.cpp  Renderer.h  TextureManager.cpp  VIDVulkan.cpp  VIDVulkan.h  VIDVulkanCInterface.h  Vdp1Renderer.cpp  Vdp1Renderer.h  VdpPipeline.cpp  VertexManager.h  VulkanScene.cpp  VulkanScene.h  VulkanTools.cpp  Window.cpp  Window.h  WindowRenderer.cpp  external_glfw.cmake  external_shaderc.cmake
(+144 files in other folders)
