option(KRONOS_GL_DEBUG "Debug output for GL" off)
mark_as_advanced(KRONOS_GL_DEBUG)
if(KRONOS_GL_DEBUG)
	add_definitions(-DYGL_DEBUG)
endif()

option(KRONOS_FRAME_DEBUG "Debug output for TODO (most likely each frame)" off)
mark_as_advanced(KRONOS_FRAME_DEBUG)
if(KRONOS_FRAME_DEBUG)
	add_definitions(-DFRAME_DEBUG)
endif()

option(KRONOS_SMPC_DEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_SMPC_DEBUG)
if(KRONOS_SMPC_DEBUG)
	add_definitions(-DSMPC_DEBUG)
endif()

option(KRONOS_CDDEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_CDDEBUG)
if(KRONOS_CDDEBUG)
	add_definitions(-DCDDEBUG)
endif()

option(KRONOS_NETLINK_DEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_NETLINK_DEBUG)
if(KRONOS_NETLINK_DEBUG)
	add_definitions(-DNETLINK_DEBUG)
endif()

option(KRONOS_SCSP_DEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_SCSP_DEBUG)
if(KRONOS_SCSP_DEBUG)
	add_definitions(-DSCSP_DEBUG)
endif()

option(KRONOS_SCSPDSP_DEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_SCSPDSP_DEBUG)
if(KRONOS_SCSPDSP_DEBUG)
	add_definitions(-DSCSPDSP_DEBUG)
endif()

option(KRONOS_VDP1_DEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_VDP1_DEBUG)
if(KRONOS_VDP1_DEBUG)
	add_definitions(-DVDP1_DEBUG)
endif()

option(KRONOS_VDP2_DEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_VDP2_DEBUG)
if(KRONOS_VDP2_DEBUG)
	add_definitions(-DVDP2_DEBUG)
endif()

option(KRONOS_SMPC_DEBUG "Debug output for TODO ()" off)
mark_as_advanced(KRONOS_SMPC_DEBUG)
if(KRONOS_SMPC_DEBUG)
	add_definitions(-DSMPC_DEBUG)
endif()

option(KRONOS_FORCE_CXX_COMPILER, "Force the c++ compiler to be used for c files" off)
mark_as_advanced(KRONOS_FORCE_CXX_COMPILER)
if(KRONOS_FORCE_CXX_COMPILER)
	SET(CMAKE_C_COMPILER CACHE ${CMAKE_CXX_COMPILER} FORCE)
endif()

option(KRONOS_SHADER_DEBUG "Output shader related logs and full shader code" off)
mark_as_advanced(KRONOS_SHADER_DEBUG)
if(KRONOS_SHADER_DEBUG)
	add_definitions(-DSHADER_DEBUG)
endif()

option(KRONOS_LOG_DEBUG_TO_FILE "Logs debug output to stdout.txt in the working directory" off)
mark_as_advanced(KRONOS_LOG_DEBUG_TO_FILE)
if(KRONOS_LOG_DEBUG_TO_FILE)
	add_definitions(-DLOG_FILE_DEBUG)
endif()
